--- a/client.html
+++ b/client.html
@@ -66,6 +66,57 @@
     </style>
 </head>
 <body>
+
+ <div class="container">
+        <h2>Check Visa Requirement</h2>
+        <select id="country">
+            <option value="">Select a country</option>
+            <option value="USA">USA</option>
+            <option value="Canada">Canada</option>
+            <option value="India">India</option>
+            <option value="UK">UK</option>
+            <option value="Australia">Australia</option>
+        </select>
+        <button onclick="checkVisa()">Check Visa</button>
+        <p id="visaStatus"></p>
+    </div>
+
+    <script>
+        function checkVisa() {
+            const country = document.getElementById('country').value;
+            const statusMessage = document.getElementById('visaStatus');
+
+            if (!country) {
+                statusMessage.textContent = "Please select a country.";
+                statusMessage.className = 'error';
+                return;
+            }
+
+            switch (country) {
+                case "USA":
+                    statusMessage.textContent = "Visa required for most applicants.";
+                    break;
+                case "Canada":
+                    statusMessage.textContent = "Visa required unless you have an eTA.";
+                    break;
+                case "India":
+                    statusMessage.textContent = "Visa required before travel.";
+                    break;
+                case "UK":
+                    statusMessage.textContent = "Visa depends on the duration of stay.";
+                    break;
+                case "Australia":
+                    statusMessage.textContent = "eVisa available for eligible travelers.";
+                    break;
+                default:
+                    statusMessage.textContent = "Invalid selection.";
+                    break;
+            }
+
+            statusMessage.className = '';
+        }
+    </script>
+
     <div class="container">
         <h2>Visa Application</h2>
         <form id="visaForm" action="visa_application.php" method="POST" onsubmit="return validateForm()">
